--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,6 +19,7 @@ dependencies:
   webview_flutter: ^3.0.0
   url_launcher: ^6.1.10
   crypto: ^3.0.2
+  flutter_inappwebview: ^5.8.0
 
 dev_dependencies:
   flutter_test:
